--- a/img_patch_code.ipynb
+++ b/img_patch_code.ipynb
@@ -328,22 +328,6 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(5):\n",
-        "    for j in range(5):\n",
-        "        patch_img = img_5000[ i*1000 : i*1000 + 1000,    j*1000 :  j*1000+1000  ,:]\n",
-        "        save_path = f'/content/drive/MyDrive/Cloud_data/cloud_train/train_clouds_data/patch_img/img{i+1}.jpg'\n",
-        "    \n",
-        "        cv2.imwrite(save_path, patch_img)"
-      ],
-      "metadata": {
-        "id": "Q2N3H9Yk_0ZF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "class image_processing():\n",
         "\n",
         "    \n",
@@ -413,7 +397,7 @@
       "cell_type": "code",
       "source": [
         "dir_path = '/content/drive/MyDrive/Cloud_data/cloud_train/train_clouds_data/'\n",
-        "img_dir_path = os.path.join(dir_path, 'png2')\n",
+        "img_dir_path = os.path.join(dir_path, 'png')\n",
         "patch_img_dir_path = os.path.join(dir_path, 'patch_img') \n"
       ],
       "metadata": {
@@ -598,17 +582,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "iElk8sKxNjuv"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
