--- a/img_patch_code.ipynb
+++ b/img_patch_code.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 147,
       "metadata": {
         "id": "DU8vm33R7rp-"
       },
@@ -42,15 +42,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2Vdu-oR79bv",
-        "outputId": "7324d0d6-0ce3-4c2a-e9c7-b30db2b5fa09"
+        "outputId": "4e9b4454-1c4e-48aa-87c1-37fb524b17fa"
       },
-      "execution_count": null,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "Tjnbplea8ECy"
       },
-      "execution_count": null,
+      "execution_count": 149,
       "outputs": []
     },
     {
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVkHc24o8JFu",
-        "outputId": "65db2a75-99b6-4dc6-829a-7ec88c92eaa6"
+        "outputId": "b823d081-4369-4179-e80e-4f69cd7f599f"
       },
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
       "cell_type": "code",
       "source": [
         "file_list = os.listdir(img_dir_path)\n",
-        "print(file_list)\n",
+        "print(file_list[:10])\n",
         "print(len(file_list))"
       ],
       "metadata": {
@@ -105,15 +105,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrZoGco38KAn",
-        "outputId": "80a004e9-7049-4e31-c61f-ff40b3406fd5"
+        "outputId": "aea08774-a96b-47a2-8f8d-032e4d7cfeee"
       },
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['CLD00001_NGR_K3A_NIA0001.png', 'CLD00001_RGB_K3A_NIA0001.png', 'CLD00003_NGR_K3A_NIA0003.png', 'CLD00003_RGB_K3A_NIA0003.png', 'CLD00004_NGR_K3A_NIA0004.png', 'CLD00004_RGB_K3A_NIA0004.png', 'CLD00005_NGR_K3A_NIA0005.png', 'CLD00005_RGB_K3A_NIA0005.png', 'CLD00008_NGR_K3A_NIA0008.png', 'CLD00008_RGB_K3A_NIA0008.png', 'CLD00011_NGR_K3A_NIA0011.png', 'CLD00011_RGB_K3A_NIA0011.png', 'CLD00012_NGR_K3A_NIA0012.png', 'CLD00012_RGB_K3A_NIA0012.png', 'CLD00013_NGR_K3A_NIA0013.png', 'CLD00013_RGB_K3A_NIA0013.png', 'CLD00016_NGR_K3A_NIA0016.png', 'CLD00016_RGB_K3A_NIA0016.png', 'CLD00017_NGR_K3A_NIA0017.png', 'CLD00017_RGB_K3A_NIA0017.png', 'CLD00018_NGR_K3A_NIA0018.png', 'CLD00018_RGB_K3A_NIA0018.png', 'CLD00019_NGR_K3A_NIA0019.png', 'CLD00019_RGB_K3A_NIA0019.png', 'CLD00021_NGR_K3A_NIA0021.png', 'CLD00021_RGB_K3A_NIA0021.png', 'CLD00022_NGR_K3A_NIA0022.png', 'CLD00022_RGB_K3A_NIA0022.png', 'CLD00023_NGR_K3A_NIA0023.png', 'CLD00023_RGB_K3A_NIA0023.png', 'CLD00028_NGR_K3A_NIA0028.png', 'CLD00028_RGB_K3A_NIA0028.png', 'CLD00029_NGR_K3A_NIA0029.png', 'CLD00029_RGB_K3A_NIA0029.png', 'CLD00033_NGR_K3_NIA0033.png', 'CLD00033_RGB_K3_NIA0033.png', 'CLD00035_NGR_K3_NIA0035.png', 'CLD00035_RGB_K3_NIA0035.png', 'CLD00036_NGR_K3_NIA0036.png', 'CLD00036_RGB_K3_NIA0036.png', 'CLD00038_NGR_K3_NIA0038.png', 'CLD00038_RGB_K3_NIA0038.png', 'CLD00039_NGR_K3_NIA0039.png', 'CLD00039_RGB_K3_NIA0039.png', 'CLD00040_NGR_K3_NIA0040.png', 'CLD00040_RGB_K3_NIA0040.png', 'CLD00041_NGR_K3_NIA0041.png', 'CLD00041_RGB_K3_NIA0041.png', 'CLD00042_NGR_K3_NIA0042.png', 'CLD00042_RGB_K3_NIA0042.png', 'CLD00044_NGR_K3_NIA0044.png', 'CLD00044_RGB_K3_NIA0044.png', 'CLD00045_NGR_K3_NIA0045.png', 'CLD00045_RGB_K3_NIA0045.png', 'CLD00047_NGR_K3_NIA0047.png', 'CLD00047_RGB_K3_NIA0047.png', 'CLD00048_NGR_K3_NIA0048.png', 'CLD00048_RGB_K3_NIA0048.png', 'CLD00050_NGR_K3_NIA0050.png', 'CLD00050_RGB_K3_NIA0050.png', 'CLD00051_NGR_K3_NIA0051.png', 'CLD00051_RGB_K3_NIA0051.png', 'CLD00052_NGR_K3_NIA0052.png', 'CLD00052_RGB_K3_NIA0052.png', 'CLD00053_NGR_K3_NIA0053.png', 'CLD00053_RGB_K3_NIA0053.png', 'CLD00054_NGR_K3_NIA0054.png', 'CLD00054_RGB_K3_NIA0054.png', 'CLD00059_NGR_K3_NIA0059.png', 'CLD00059_RGB_K3_NIA0059.png', 'CLD00061_NGR_K3_NIA0061.png', 'CLD00061_RGB_K3_NIA0061.png', 'CLD00063_NGR_K3_NIA0063.png', 'CLD00063_RGB_K3_NIA0063.png', 'CLD00065_NGR_K3_NIA0065.png', 'CLD00065_RGB_K3_NIA0065.png', 'CLD00066_NGR_K3_NIA0066.png', 'CLD00066_RGB_K3_NIA0066.png', 'CLD00067_NGR_K3_NIA0067.png', 'CLD00067_RGB_K3_NIA0067.png', 'CLD00068_NGR_K3_NIA0068.png', 'CLD00068_RGB_K3_NIA0068.png', 'CLD00069_NGR_K3_NIA0069.png', 'CLD00069_RGB_K3_NIA0069.png', 'CLD00070_NGR_K3_NIA0070.png', 'CLD00070_RGB_K3_NIA0070.png', 'CLD00071_NGR_K3_NIA0071.png', 'CLD00071_RGB_K3_NIA0071.png', 'CLD00073_NGR_K3_NIA0073.png', 'CLD00073_RGB_K3_NIA0073.png', 'CLD00074_NGR_K3_NIA0074.png', 'CLD00074_RGB_K3_NIA0074.png', 'CLD00075_NGR_K3_NIA0075.png', 'CLD00075_RGB_K3_NIA0075.png', 'CLD00076_NGR_K3_NIA0076.png', 'CLD00076_RGB_K3_NIA0076.png', 'CLD00077_NGR_K3_NIA0077.png', 'CLD00077_RGB_K3_NIA0077.png', 'CLD00079_NGR_K3_NIA0393.png', 'CLD00079_RGB_K3_NIA0393.png', 'CLD00081_NGR_K3_NIA0395.png', 'CLD00081_RGB_K3_NIA0395.png', 'CLD00082_NGR_K3_NIA0396.png', 'CLD00082_RGB_K3_NIA0396.png', 'CLD00083_RGB_K3_NIA0397.png', 'CLD00083_NGR_K3_NIA0397.png', 'CLD00085_NGR_K3_NIA0399.png', 'CLD00085_RGB_K3_NIA0399.png', 'CLD00087_NGR_K3_NIA0401.png', 'CLD00087_RGB_K3_NIA0401.png', 'CLD00088_NGR_K3_NIA0402.png', 'CLD00088_RGB_K3_NIA0402.png', 'CLD00093_NGR_K3_NIA0407.png', 'CLD00093_RGB_K3_NIA0407.png', 'CLD00100_NGR_K3_NIA0414.png', 'CLD00100_RGB_K3_NIA0414.png', 'CLD00103_NGR_K3_NIA0417.png', 'CLD00103_RGB_K3_NIA0417.png', 'CLD00105_NGR_K3_NIA0419.png', 'CLD00105_RGB_K3_NIA0419.png', 'CLD00107_NGR_K3_NIA0421.png', 'CLD00107_RGB_K3_NIA0421.png', 'CLD00108_NGR_K3_NIA0422.png', 'CLD00108_RGB_K3_NIA0422.png', 'CLD00115_NGR_K3_NIA0429.png', 'CLD00115_RGB_K3_NIA0429.png', 'CLD00119_NGR_K3_NIA0433.png', 'CLD00119_RGB_K3_NIA0433.png', 'CLD00122_NGR_K3_NIA0436.png', 'CLD00122_RGB_K3_NIA0436.png', 'CLD00124_NGR_K3_NIA0438.png', 'CLD00124_RGB_K3_NIA0438.png', 'CLD00125_NGR_K3_NIA0439.png', 'CLD00125_RGB_K3_NIA0439.png', 'CLD00133_NGR_K3_NIA0447.png', 'CLD00133_RGB_K3_NIA0447.png', 'CLD00134_NGR_K3_NIA0448.png', 'CLD00134_RGB_K3_NIA0448.png', 'CLD00138_NGR_K3_NIA0452.png', 'CLD00138_RGB_K3_NIA0452.png', 'CLD00139_NGR_K3_NIA0453.png', 'CLD00141_NGR_K3_NIA0455.png', 'CLD00139_RGB_K3_NIA0453.png', 'CLD00141_RGB_K3_NIA0455.png', 'CLD00146_NGR_K3A_NIA0460.png', 'CLD00146_RGB_K3A_NIA0460.png', 'CLD00148_NGR_K3A_NIA0462.png', 'CLD00148_RGB_K3A_NIA0462.png', 'CLD00149_NGR_K3A_NIA0463.png', 'CLD00149_RGB_K3A_NIA0463.png', 'CLD00151_NGR_K3A_NIA0465.png', 'CLD00151_RGB_K3A_NIA0465.png', 'CLD00153_NGR_K3A_NIA0467.png', 'CLD00153_RGB_K3A_NIA0467.png', 'CLD00155_NGR_K3A_NIA0469.png', 'CLD00155_RGB_K3A_NIA0469.png', 'CLD00157_NGR_K3A_NIA0471.png', 'CLD00157_RGB_K3A_NIA0471.png', 'CLD00158_NGR_K3A_NIA0472.png', 'CLD00158_RGB_K3A_NIA0472.png', 'CLD00159_NGR_K3A_NIA0473.png', 'CLD00159_RGB_K3A_NIA0473.png', 'CLD00160_NGR_K3A_NIA0474.png', 'CLD00160_RGB_K3A_NIA0474.png', 'CLD00161_NGR_K3A_NIA0475.png', 'CLD00161_RGB_K3A_NIA0475.png', 'CLD00163_NGR_K3A_NIA0477.png', 'CLD00163_RGB_K3A_NIA0477.png', 'CLD00164_NGR_K3A_NIA0478.png', 'CLD00164_RGB_K3A_NIA0478.png', 'CLD00165_NGR_K3A_NIA0479.png', 'CLD00165_RGB_K3A_NIA0479.png', 'CLD00166_NGR_K3A_NIA0480.png', 'CLD00166_RGB_K3A_NIA0480.png', 'CLD00167_NGR_K3A_NIA0481.png', 'CLD00167_RGB_K3A_NIA0481.png', 'CLD00168_NGR_K3A_NIA0482.png', 'CLD00168_RGB_K3A_NIA0482.png', 'CLD00169_NGR_K3A_NIA0483.png', 'CLD00169_RGB_K3A_NIA0483.png', 'CLD00170_NGR_K3A_NIA0484.png', 'CLD00170_RGB_K3A_NIA0484.png', 'CLD00171_NGR_K3A_NIA0485.png', 'CLD00171_RGB_K3A_NIA0485.png', 'CLD00172_NGR_K3A_NIA0486.png', 'CLD00172_RGB_K3A_NIA0486.png', 'CLD00174_NGR_K3A_NIA0488.png', 'CLD00174_RGB_K3A_NIA0488.png', 'CLD00175_NGR_K3A_NIA0489.png', 'CLD00175_RGB_K3A_NIA0489.png', 'CLD00176_NGR_K3A_NIA0490.png', 'CLD00176_RGB_K3A_NIA0490.png', 'CLD00177_NGR_K3A_NIA0491.png', 'CLD00177_RGB_K3A_NIA0491.png', 'CLD00178_NGR_K3A_NIA0492.png', 'CLD00178_RGB_K3A_NIA0492.png', 'CLD00180_NGR_K3A_NIA0494.png', 'CLD00180_RGB_K3A_NIA0494.png', 'CLD00181_NGR_K3A_NIA0495.png', 'CLD00182_NGR_K3A_NIA0496.png', 'CLD00181_RGB_K3A_NIA0495.png', 'CLD00182_RGB_K3A_NIA0496.png', 'CLD00183_NGR_K3A_NIA0497.png', 'CLD00183_RGB_K3A_NIA0497.png', 'CLD00186_NGR_K3A_NIA0500.png', 'CLD00186_RGB_K3A_NIA0500.png', 'CLD00188_NGR_K3A_NIA1035.png', 'CLD00188_RGB_K3A_NIA1035.png', 'CLD00189_NGR_K3A_NIA1036.png', 'CLD00189_RGB_K3A_NIA1036.png', 'CLD00190_NGR_K3A_NIA1037.png', 'CLD00190_RGB_K3A_NIA1037.png', 'CLD00191_NGR_K3A_NIA1038.png', 'CLD00191_RGB_K3A_NIA1038.png', 'CLD00192_NGR_K3A_NIA1039.png', 'CLD00192_RGB_K3A_NIA1039.png', 'CLD00193_NGR_K3A_NIA1040.png', 'CLD00193_RGB_K3A_NIA1040.png', 'CLD00194_NGR_K3A_NIA1041.png', 'CLD00194_RGB_K3A_NIA1041.png', 'CLD00195_NGR_K3A_NIA1042.png', 'CLD00195_RGB_K3A_NIA1042.png', 'CLD00196_NGR_K3A_NIA1043.png', 'CLD00196_RGB_K3A_NIA1043.png', 'CLD00197_NGR_K3A_NIA1044.png', 'CLD00197_RGB_K3A_NIA1044.png', 'CLD00198_NGR_K3A_NIA1045.png', 'CLD00198_RGB_K3A_NIA1045.png', 'CLD00200_NGR_K3A_NIA1047.png', 'CLD00200_RGB_K3A_NIA1047.png', 'CLD00201_NGR_K3A_NIA1048.png', 'CLD00201_RGB_K3A_NIA1048.png', 'CLD00202_NGR_K3A_NIA1049.png', 'CLD00202_RGB_K3A_NIA1049.png', 'CLD00203_NGR_K3A_NIA1050.png', 'CLD00203_RGB_K3A_NIA1050.png', 'CLD00204_NGR_K3A_NIA1051.png', 'CLD00204_RGB_K3A_NIA1051.png', 'CLD00205_NGR_K3A_NIA1052.png', 'CLD00205_RGB_K3A_NIA1052.png', 'CLD00206_NGR_K3A_NIA1053.png', 'CLD00206_RGB_K3A_NIA1053.png', 'CLD00207_NGR_K3A_NIA1054.png', 'CLD00207_RGB_K3A_NIA1054.png', 'CLD00208_NGR_K3A_NIA1055.png', 'CLD00208_RGB_K3A_NIA1055.png', 'CLD00209_NGR_K3A_NIA1056.png', 'CLD00209_RGB_K3A_NIA1056.png', 'CLD00210_NGR_K3A_NIA1057.png', 'CLD00210_RGB_K3A_NIA1057.png', 'CLD00211_NGR_K3A_NIA1058.png', 'CLD00211_RGB_K3A_NIA1058.png', 'CLD00213_NGR_K3A_NIA1060.png', 'CLD00213_RGB_K3A_NIA1060.png', 'CLD00214_NGR_K3A_NIA1061.png', 'CLD00214_RGB_K3A_NIA1061.png', 'CLD00216_NGR_K3A_NIA1063.png', 'CLD00216_RGB_K3A_NIA1063.png', 'CLD00217_NGR_K3A_NIA1064.png', 'CLD00217_RGB_K3A_NIA1064.png']\n",
+            "['CLD00001_NGR_K3A_NIA0001.png', 'CLD00001_RGB_K3A_NIA0001.png', 'CLD00003_NGR_K3A_NIA0003.png', 'CLD00003_RGB_K3A_NIA0003.png', 'CLD00004_NGR_K3A_NIA0004.png', 'CLD00004_RGB_K3A_NIA0004.png', 'CLD00005_NGR_K3A_NIA0005.png', 'CLD00005_RGB_K3A_NIA0005.png', 'CLD00008_NGR_K3A_NIA0008.png', 'CLD00008_RGB_K3A_NIA0008.png']\n",
             "260\n"
           ]
         }
