--- a/Data_Preprocessing/Random_crop_preprocessing.ipynb
+++ b/Data_Preprocessing/Random_crop_preprocessing.ipynb
@@ -6,8 +6,7 @@
       "name": "Random_crop_preprocessing.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "JUEX1yT6ObHp",
-        "9pCu1-2g6IE2"
+        "JUEX1yT6ObHp"
       ]
     },
     "kernelspec": {
@@ -106,16 +105,16 @@
         "validation_dir_path = '/content/drive/MyDrive/Cloud_data/cloud_validation/'\n",
         "\n",
         "train_file_path = os.path.join(train_dir_path,'train_clouds_data/png')\n",
-        "train_save_path = os.path.join(train_dir_path,'crop_patch_img')\n",
+        "train_save_path = os.path.join(train_dir_path,'random_patch_img')\n",
         "\n",
         "train_label_file_path = os.path.join(train_dir_path,'train_clouds_labeling')\n",
-        "train_label_save_path = os.path.join(train_dir_path,'crop_patch_labeling')\n",
+        "train_label_save_path = os.path.join(train_dir_path,'random_patch_labeling')\n",
         "\n",
         "validation_file_path = os.path.join(validation_dir_path,'validate_clouds_data/png')\n",
-        "validation_save_path = os.path.join(validation_dir_path,'crop_patch_img')\n",
+        "validation_save_path = os.path.join(validation_dir_path,'random_patch_img')\n",
         "\n",
         "validation_label_file_path = os.path.join(validation_dir_path,'validate_clouds_labeling')\n",
-        "validation_label_save_path = os.path.join(validation_dir_path,'crop_patch_labeling')"
+        "validation_label_save_path = os.path.join(validation_dir_path,'random_patch_labeling')"
       ],
       "metadata": {
         "id": "8gJ2mOlz6NGl"
@@ -156,7 +155,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def crop_random(path,crop_path,random_crop_size):\n",
+        "def random_patch(path,crop_path,random_crop_size):\n",
         "    file_count = 0\n",
         "    for file_path in path:\n",
         "        file_count += 1\n",
@@ -175,10 +174,10 @@
         "            cv2.imwrite(save_path, crop_img)\n",
         "    print(file_count,\"장 전처리 완료.\")\n",
         "\n",
-        "crop_random(train_rgb_file_list,train_save_path,(800,800))\n",
-        "crop_random(train_label_file_list,train_label_save_path,(800,800))\n",
-        "crop_random(validation_rgb_file_list,validation_save_path,(800,800))\n",
-        "crop_random(validation_label_file_list,validation_label_save_path,(800,800))"
+        "random_patch(train_rgb_file_list,train_save_path,(800,800))\n",
+        "random_patch(train_label_file_list,train_label_save_path,(800,800))\n",
+        "random_patch(validation_rgb_file_list,validation_save_path,(800,800))\n",
+        "random_patch(validation_label_file_list,validation_label_save_path,(800,800))"
       ],
       "metadata": {
         "id": "ev3zKAwyb6eX"
