--- a/Data_Preprocessing/Random_crop_preprocessing.ipynb
+++ b/Data_Preprocessing/Random_crop_preprocessing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "ROaksixkOV2l"
       },
@@ -46,6 +46,7 @@
         "from glob import glob\n",
         "from PIL import Image\n",
         "from tensorflow import keras\n",
+        "import tensorflow as tf\n",
         "\n",
         "from tensorflow.keras.utils import *\n",
         "from tensorflow.keras.models import *\n",
@@ -95,7 +96,7 @@
       "metadata": {
         "id": "l8wa8TpF6Ld7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -119,7 +120,7 @@
       "metadata": {
         "id": "8gJ2mOlz6NGl"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
       "metadata": {
         "id": "Xwlx0wQpEKJC"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -149,38 +150,41 @@
       "metadata": {
         "id": "PwZjVDflEK7c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def random_patch(path,crop_path,random_crop_size):\n",
-        "    file_count = 0\n",
-        "    for file_path in path:\n",
-        "        file_count += 1\n",
-        "        img = cv2.imread(file_path)\n",
-        "        \n",
+        "def random_patch(img_path,label_path, img_randomcrop_path, label_randomcrop_path, random_crop_size):\n",
+        "    for file_count,(img_file,label_file) in enumerate(zip(img_path,label_path)):\n",
+        "        # print(file_count,imgfile,labelfile)\n",
+        "        img = cv2.imread(img_file)\n",
+        "        label = cv2.imread(label_file)\n",
+        "\n",
         "        height, width = img.shape[0], img.shape[1]\n",
         "        dy, dx = random_crop_size\n",
-        "        for i in range(10):\n",
+        "        for i in range(36):\n",
         "            x = np.random.randint(0, width - dx + 1)    # 0 ~ cropsize  randomNum\n",
         "            y = np.random.randint(0, height - dy + 1)   # 0 ~ cropsize  randomNum\n",
-        "            #print(x,y)\n",
         "            crop_img = img[y:(y+dy), x:(x+dx),:]\n",
+        "            crop_label = label[y:(y+dy), x:(x+dx),:]\n",
+        "            \n",
+        "            crop_img_save_path = img_randomcrop_path + f'/img{file_count+1}_{i+1}.png'\n",
+        "            crop_label_save_path = label_randomcrop_path + f'/img{file_count+1}_{i+1}.png'\n",
+        "            # print(crop_img_save_path,crop_label_save_path)\n",
+        "            cv2.imwrite(crop_img_save_path, crop_img)\n",
+        "            cv2.imwrite(crop_label_save_path,crop_label)\n",
+        "    print(file_count+1,\"장 전처리 완료.\")          \n",
         "\n",
-        "            save_path = crop_path + f'/img{file_count}_{i+1}.png'                   \n",
-        "            #print(save_path)\n",
-        "            cv2.imwrite(save_path, crop_img)\n",
-        "    print(file_count,\"장 전처리 완료.\")\n",
         "\n",
-        "random_patch(train_rgb_file_list,train_save_path,(800,800))\n",
-        "random_patch(train_label_file_list,train_label_save_path,(800,800))\n",
-        "random_patch(validation_rgb_file_list,validation_save_path,(800,800))\n",
-        "random_patch(validation_label_file_list,validation_label_save_path,(800,800))"
+        "random_patch(train_rgb_file_list,train_label_file_list,\n",
+        "             train_save_path,train_label_save_path,(800,800))\n",
+        "random_patch(validation_rgb_file_list,validation_label_file_list,\n",
+        "             validation_save_path,validation_label_save_path,(800,800))"
       ],
       "metadata": {
-        "id": "ev3zKAwyb6eX"
+        "id": "dwVlXvWZADW5"
       },
       "execution_count": null,
       "outputs": []
